force-app/main/default/objects/DeliverySites__c/DeliverySites__c.object-meta.xml
<CustomObject>
    <description>This will give access to the Delivery Site Object.</description>
    <label>Delivery Sites</label>
    <nameField>
        <label>Delivery Sites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>