force-app/main/default/objects/DeliverySites__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Captures the city of the deliverable location</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>