force-app/main/default/objects/DeliverySites__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <description>Captures the pin code of the deliverable location.</description>
    <externalId>true</externalId>
    <label>Pin code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>