force-app/main/default/objects/DeliverySites__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <externalId>true</externalId>
    <label>Area Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>