force-app/main/default/objects/DeliverySites__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <description>Captures the state of the deliverable location</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>