force-app/main/default/objects/DeliverySites__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <description>Captures the street of the deliverable location.</description>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>